Good resizing on the fly, but issue with margins
When we add margins between images, the content overflows the initial container width

--- a/src/app/components/image-list/image-list-dumb.component.scss
+++ b/src/app/components/image-list/image-list-dumb.component.scss
@@ -1,41 +1,3 @@
-
-ul {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-li {
-    height: 20vh;
-    flex-grow: 1;
-    list-style-type: none;
-
-    &:last-child {
-        flex-grow: 10;
-    }
-}
-
-img {
-    max-height: 100%;
-    min-width: 100%;
-    object-fit: cover;
-    vertical-align: bottom;
-}
-
-glr-image-popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($color: #ededed, $alpha: 0.5);
-
-    // &:empty {
-    //     display: none;
-    // }
-}
-
 .rows-wrapper {
     display: flex;
     flex-direction: column;
@@ -58,4 +20,12 @@ glr-image-popup {
 .row {
     display: flex;
     flex-direction: row;
+}
+
+
+img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
 }
