--- a/src/app/components/image-popup/image-popup.component.scss
+++ b/src/app/components/image-popup/image-popup.component.scss
@@ -2,5 +2,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: flex-start;
+    align-content: center;
 }
